--- a/storefront/styles/reset.css
+++ b/storefront/styles/reset.css
@@ -36,6 +36,7 @@ body {
   font-weight: normal;
   display: flex;
   flex-direction: column;
+  overscroll-behavior: none;
 }
 
 main {
